--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,22 +4,21 @@
   </a>
 </h3>
 
-<p *ngIf="product.description">Description: {{ product.description }}</p>
+<p *ngIf="product.description">{{ product.description }}</p>
 
 <button type="button" (click)="share()">Share</button>
 
 <app-product-alerts [product]="product" (notify)="onNotify()">
 </app-product-alerts>
 
-<p-dialog header="{{ product.name }}" [(visible)]="display">
-  Precio: {{ product.price }}
-</p-dialog>
-
-<button
-  type="button"
-  (click)="showDialog()"
-  icon="pi pi-info-circle"
-  label="Mostrar"
->
-  Comprar
-</button>
+<p-button type="button" (click)="addToCart(product)">
+  <p-dialog header="{{ product.name }}" [(visible)]="display">
+    Precio: {{ product.price }}
+    <img
+      src="./assets/phones/{{ product.images }}"
+      width="100px"
+      height="100px"
+      alt="Sin imagen"
+    />
+  </p-dialog>
+</p-button>
